2008-09-08  Berwin A Turlach  <berwin@maths.uwa.edu.au>

	* Added a Makefile to inst/doc since "R CMD check" does not behave
	in documented way, it actually tries to build the vignette PDF.

2008-09-07  Berwin A Turlach  <berwin@maths.uwa.edu.au>

	* Various .Rd files contained an unmatched right brace.  Fixed
	those files.  Reported by Tim Hesterberg <rocket@google.com>.

2007-09-30  Berwin A Turlach  <berwin@maths.uwa.edu.au>

	* Updated various .Rd files to cope with changes in R-2.6.0
	* Updated some .q files to cope with changes in R-2.6.0

2006-01-06  Berwin A Turlach  <berwin@maths.uwa.edu.au>

	* DESCRIPTION (Version, Date, Maintainer)
	* man/predict.gl1ce.Rd:  cope with change to all.equal() in R-2.3.x 

2005-06-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.2-2

	* src/lasso.c (lasso): indent and use spaces "properly".

	* R/gl1ce.q (gl1ce): use eval(m, parent.frame())
	* R/l1ce.q (l1ce):   instead of eval(m, data)
	* R/l1ce.q (l1ce): warn about rank only when p <= n

2005-02-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/l1ce.q (l1ce): improve error message for 'constant column'

2004-04-13  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 1.2-0

	* R/l1ce.q: fix intercepts for multi-bound situation
	            (reported by Martin Keller-Ressel).
	* tests/l1ce-tst.Rout.save: modified correspondingly and for :
	* tests/l1ce-tst.R: new consistency test (for the above problem)

2004-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.1-0

	* R/summary.q (summary.gl1ce): $coefficients should be "usual"
	matrix, not a 1-dim array. {The docs do not talk about it.}
	* R/print.q (print.summary.gl1ce): coefficients; also visualize '0'!

	* R/predict.q (predict.gl1ce): type = "response": fix R port
	* R/gl1ce.q (family.gl1ce): new method
	* man/gl1ce.Rd: and docu

	* man/predict.gl1ce.Rd: add \examples{}

	* man/residuals.gl1ce.Rd: \seealso{} + cosmetic
