@@ -1,6 +1,6 @@
 Package: lasso2
-Version: 1.2-8
-Date: 2008-09-08
+Version: 1.2-9
+Date: 2008-09-11
 Author: Justin Lokhorst, Bill Venables and Berwin Turlach;
   port to R, tests etc: Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Berwin Turlach <statba@nus.edu.sg>
@@ -11,4 +11,4 @@ Description: Routines and documentation for solving regression problems
 Depends: R (>= 2.5.0)
 License: GPL version 2 or later
 URL: http://www.maths.uwa.edu.au/~berwin/software/lasso.html
-Packaged: Mon Sep  8 18:18:07 2008; berwin
+Packaged: Thu Sep 11 15:37:30 2008; berwin
